# Metal-Tutorial

./: .clangd  .gitmodules  CMakeLists.txt  Taskfile.yml
include/: hoge.h
metal-cpp-extensions/AppKit/: AppKit.hpp  AppKitPrivate.hpp  NSApplication.hpp  NSEvent.hpp  NSMenu.hpp  NSMenuItem.hpp  NSRunningApplication.hpp  NSView.hpp  NSWindow.hpp
src/: hoge.mm  main.cc
